--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -59,6 +59,7 @@
               <use href="images/sprite.svg#icon-arrow-right"></use>
             </svg>
           </button>
+          <a href=""></a>
         </div>
       </li>
     </ul>
