--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -17,7 +17,7 @@
         </div>
         <p class="reviews__location">Alex, Odesa</p>
       </article>
-      <article class="reviews__slider-item">
+      <article class="reviews__slider-itemF">
         <img class="reviews__avatar" src="./images/avatar_02.jpg" alt="customer" />
         <div class="reviews__box">
           <div class="reviews__text-box">
